--- a/to_do_list/src/components/NavBar/NavBar.module.scss
+++ b/to_do_list/src/components/NavBar/NavBar.module.scss
@@ -1,5 +1,7 @@
+@import '../../styles/settings.scss';
+
 .navbar {
-    background-color: darken($color-dark, 3%);
+    background-color: dark($color-dark, 3%);
     padding: 15px 0;
   }
   
