change Linkto for NavLink from react router

--- a/to_do_list/src/components/NavBar/NavBar.module.scss
+++ b/to_do_list/src/components/NavBar/NavBar.module.scss
@@ -37,6 +37,10 @@
       color: white;
       font-size: 18px;
     }
+
+    .linkActive{
+      color: $color-warning;
+    }
   
   
 //   .navbar nav {
